--- a/octoprint_mrbeam/templates/tab_designstore.jinja2
+++ b/octoprint_mrbeam/templates/tab_designstore.jinja2
@@ -1,6 +1,5 @@
-
 <div class="tab-pane" id="designstore">
-    <iframe id="design_store_iframe" scrolling="auto" frameBorder="0"></iframe>
+    <iframe loading="lazy" id="design_store_iframe" scrolling="auto" frameBorder="0"></iframe>
     <div id="design_store_offline_placeholder">
 {#        Seems like you are not connected to the internet. If you want to use the Design Store, please connect to the internet and reload the page.#}
 
