SW-1270 mrb3-core-plugin to python 3.10.6 (first step, OpenCV disabled) (#15)
* SW-1363 added python compatibility info (#1514)

* SW-1364 hide unnecessary settings (#1515)

* SW-1365 fix settings active state (#1516)

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* SW-1361 replace deprecated users view model (#1517)

see axels original commit aa99f338ee7bc4413b58469f67b887d0d7c80b8c

* SW-1362 Fix deprecation warnings. (#1518)

Co-authored-by: Axel Soll <axel@soll.xyz>

* SW-1265-Try-to-run-Mr-Beam-plugin-with-Octoprint-1.7.3 (#1513)

* SW-1349 Change deprecated flask babel import
* SW-1350 Analysis Queue refactor
* SW-1351 fix process command see 69b0f01a1dc19403b29b5b43e0850daa976d7abe
* SW-1357 fix sockjs timeout
* SW-1358 fix deprecated jquery see aa99f338ee7bc4413b58469f67b887d0d7c80b8c
* revert the getAttribute of the href as this is not working, but the original will work
* SW-1359 fix apperance js see aa99f338ee7bc4413b58469f67b887d0d7c80b8c

Co-authored-by: Axel Soll <axel@soll.xyz>

* SW-1416 fix conflicting machine com state (#1)

* Fix conflicting MachineCom states
- Minor refactors

see original commit 76c968fac6791b2d7b72370c1c3287275ff518a8

Co-authored-by: Axel Soll <axel@soll.xyz>
Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* SW-1423 refactor led events when using system commands (#3)

* Using Octoprint builtin function to execute system commands instead of the old function
* Fixing Sonar lint reported issues

* SW-1724 inherit from octoprint comm layer (#2)

* inherit from octoprint machinecom, machinecomprintervallback and printingfileinformation
* add missing attributes
* delete not changes methods of parent classes
* fix super calls

* SW-1742 fix the homing overlay not showing (#4)

* fix the tags, so our additional and the original are there
* fixed sonar cloud integration

* SW-1735 fix files not showing (#6)

* fix css class
* remove duplicate css

* SW-1743 fix del

--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -27,7 +27,7 @@
                     {% if mac_addrs %}
                     <div><strong>{{ _('Network interfaces') }}:</strong>
 						<ul class="list-unstyled">
-							{% for ifc, mac in mac_addrs.iteritems() %}
+							{% for ifc, mac in mac_addrs.items() %}
 							<li>{{ ifc }} (MAC: {{ mac }})</li>
 							{% endfor %}
 						</ul>
