some adjustment for css

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3408,17 +3408,17 @@ button#terminal-send {
   margin: 20px auto;
 }
 
-.hard_refresh_overlay {
+#hard_refresh_overlay {
   width: 60%;
   margin-left: -30%;
 }
-.hard_refresh_overlay .image_description {
+#hard_refresh_overlay .image_description {
   padding: 40px;
 }
-.hard_refresh_overlay .modal-header {
+#hard_refresh_overlay .modal-header {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-.hard_refresh_overlay .icon-warning-sign{
+#hard_refresh_overlay .icon-warning-sign{
   color: #e25303;
 }
