--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -52,6 +52,7 @@
                     {# Translatots: Name of the tab #}
 					<li><a href="#designlib" data-toggle="tab" id="designlib_tab_btn">{{ _('design library') }}</a></li>
                     <li><a href="#designstore" data-toggle="tab" id="designstore_tab_btn" onclick="window.mrbeam.viewModels.designStoreViewModel.goToStore()">{{ _('design store') }}</a></li>
+                    <li><a href="#material_store_content" data-toggle="tab" id="materialsotre_tab_btn">{{ _('material store') }}</a></li>
                     {% if not enableFocus %}
 					<li><a href="#focus" data-toggle="tab" id="focus_tab_btn">{{ _('focus') }}</a></li>
                     {% endif %}
@@ -122,6 +123,7 @@
 					{% include 'tab_designlib.jinja2' %}
                     {% include 'tab_messages.jinja2' %}
                     {% include 'tab_designstore.jinja2' %}
+                    {% include 'tab/tab_materialstore.jinja2' %}
 					{% if not enableFocus %}
                     {%      include 'tab_focus.jinja2' %}
                     {% endif %}
