--- a/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
+++ b/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
@@ -4,9 +4,11 @@
     </div>
     <div class="modal-body">
         <div class="row-fluid">
-            <div class="span5 image_description">
-                <p>{{ _("An update has been installed on this Mr Beam. To use the new functions, the user interace must be completely reloaded.") }}</p>
-                <p> {{ _("We call this a hard refresh. To do this, press the three keys at the same time, depending on your operating system, as shown in the graphic:") }}</p>
+            <div class="span5">
+                <div class="image_description">
+                    <p>{{ _("An update has been installed on this Mr Beam. To use the new functions, the user interace must be completely reloaded.") }}</p>
+                    <p> {{ _("We call this a hard refresh. To do this, press the three keys at the same time, depending on your operating system, as shown in the graphic:") }}</p>
+                </div>    
             </div>
             <div class="span7">
                 <b>{{ _("Windows | Strg + Shift + R") }}</b>
