--- a/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
+++ b/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
@@ -11,7 +11,7 @@
                 </div>    
             </div>
             <div class="span7">
-                <b>{{ _("Windows | Strg + Shift + R") }}</b>
+                <b>{{ _("Windows | Ctrl + Shift + R") }}</b>
                 <img src="/plugin/mrbeam/static/img/windows_refresh.png">
                 <b>{{ _("Mac | Command + Shift + R") }}</b>
                 <img src="/plugin/mrbeam/static/img/mac_refresh.png">
