--- a/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
+++ b/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
@@ -1,14 +1,24 @@
 <div id="hard_refresh_overlay" class="modal hide fade" data-backdrop="static">
     <div class="modal-header">
-        <h3><i class="icon icon-warning-sign"></i> {{ _('Refresh is needed after the last Software Update') }}</h3>
+        <h3><i class="icon icon-warning-sign"></i> {{ _("A 'Hard Refresh' is needed after the last Software Update") }}</h3>
     </div>
     <div class="modal-body">
         <div class="row-fluid">
             <div class="span5">
                 <div class="image_description">
                     <p>{{ _("An update has been installed on this Mr Beam. To use the new functions, the user interace must be completely reloaded.") }}</p>
-                    <p> {{ _("We call this a hard refresh. To do this, press the three keys at the same time, depending on your operating system, as shown in the graphic:") }}</p>
-                </div>    
+                    <p> {{ _("We call this a 'Hard Refresh'. To do this, press the three keys at the same time, depending on your operating system, as shown in the graphic:") }}</p>
+                    <br>
+                    <ol>
+                        <li>{{ _("Perform the 'Hard Refresh' using the keyboard shortcut") }}</li>
+                        <li>{{ _("Close this Window")}}</li>
+                    </ol>
+                    <br>
+                    <label for="confirm_hard_refresh_checkbox" class="checkbox">
+                        <input type="checkbox" id="confirm_hard_refresh_checkbox" data-bind="checked: hard_refresh_checkbox_checked"/>
+                        <span>{{ _("I completeley reloaded the software ('Hard Refresh'). Do not show this again in the future")}}</span>
+                    </label>
+                </div>
             </div>
             <div class="span7">
                 <b>{{ _("Windows | Ctrl + Shift + R") }}</b>
@@ -19,7 +29,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" id="#hard_refresh_confirmed" data-dismiss="modal"
-                aria-hidden="true" data-bind="click: $root.setUserHardRefreshed">{{ _('Yes, I will reload the page') }}</button>
+        <button class="btn btn-primary" id="hard_refresh_close_button" data-dismiss="modal"
+                aria-hidden="true" data-bind="click: $root.setUserHardRefreshed">{{ _('Close window') }}</button>
     </div>
 </div>
