some small adjustments

--- a/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
+++ b/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
@@ -16,7 +16,7 @@
                     <br>
                     <label for="confirm_hard_refresh_checkbox" class="checkbox">
                         <input type="checkbox" id="confirm_hard_refresh_checkbox" data-bind="checked: hard_refresh_checkbox_checked"/>
-                        <span>{{ _("I completeley reloaded the software ('Hard Refresh'). Do not show this again in the future")}}</span>
+                        <span>{{ _("I completely reloaded the software ('Hard Refresh'). Do not show this window again until the next update.")}}</span>
                     </label>
                 </div>
             </div>
