--- a/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
+++ b/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
@@ -6,7 +6,7 @@
         <div class="row-fluid">
             <div class="span5">
                 <div class="image_description">
-                    <p>{{ _("An update has been installed on this Mr Beam. To use the new functions, the user interace must be completely reloaded.") }}</p>
+                    <p>{{ _("An update has been installed on this Mr Beam. To use the new functions, the user interface must be completely reloaded.") }}</p>
                     <p> {{ _("We call this a 'Hard Refresh'. To do this, press the three keys at the same time, depending on your operating system, as shown in the graphic:") }}</p>
                     <br>
                     <ol>
