Apply suggestions from code review
Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

--- a/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
+++ b/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
@@ -15,7 +15,7 @@
                     </ol>
                     <br>
                     <label for="confirm_hard_refresh_checkbox" class="checkbox">
-                        <input type="checkbox" id="confirm_hard_refresh_checkbox" data-bind="checked: hard_refresh_checkbox_checked"/>
+                        <input type="checkbox" id="confirm_hard_refresh_checkbox" data-bind="checked: hardRefreshCheckbox"/>
                         <span>{{ _("I completely reloaded the software ('Hard Refresh'). Do not show this window again until the next update.")}}</span>
                     </label>
                 </div>
