remove unused id

--- a/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
+++ b/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" id="hard_refresh_close_button" data-dismiss="modal"
+        <button class="btn btn-primary" data-dismiss="modal"
                 aria-hidden="true" data-bind="click: $root.setUserHardRefreshed">{{ _('Close window') }}</button>
     </div>
 </div>
