--- a/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
+++ b/octoprint_mrbeam/templates/hard_refresh_overlay.jinja2
@@ -14,8 +14,8 @@
                         <li>{{ _("Close this Window")}}</li>
                     </ol>
                     <br>
-                    <label for="confirm_hard_refresh_checkbox" class="checkbox">
-                        <input type="checkbox" id="confirm_hard_refresh_checkbox" data-bind="checked: hardRefreshCheckbox"/>
+                    <label for="hard_refresh_checkbox" class="checkbox">
+                        <input type="checkbox" id="hard_refresh_checkbox" data-bind="checked: hardRefreshCheckbox"/>
                         <span>{{ _("I completely reloaded the software ('Hard Refresh'). Do not show this window again until the next update.")}}</span>
                     </label>
                 </div>
