SW-1877 stable release v0.11.0rc1 (#1596)
* Fixed:
Showing text elements error message, though the text elements are empty
An error that prevented the Mr Beam Software to start
Beta label not showing in beta channel
Some texts were not lasered correctly and crashed the device
Partly double engraving
Fix German Translations
Minor bug fixes and enhancements
* Added:
Improved release process

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>
Co-authored-by: Teja <teja@mr-beam.org>
Co-authored-by: Yelko-mrbeam <92720803+Yelko-mrbeam@users.noreply.github.com>
Co-authored-by: Ahmed Salem <85931758+ahmed-mrbeam@users.noreply.github.com>
Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>
Co-authored-by: khaledsherkawi <khaledshirkawy@gmail.com>
Co-authored-by: irlaec <irlaec@gmail.com>

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -2648,6 +2648,13 @@ input.search-query,
 }
 
 /*
+hides the force update buttons
+ */
+#settings_plugin_softwareupdate_scroll_wrapper div:nth-of-type(4) {
+  display:none;
+}
+
+/*
 * === FRESHDESK FEEDBACK WIDGET ===
 */
 #freshwidget-button > a {
@@ -3400,3 +3407,23 @@ button#terminal-send {
 #support_overlay > div.modal-body.scrollable > table {
   margin: 20px auto;
 }
+/* Support Standalone */
+
+/* Hard refresh overlay */
+
+#hard_refresh_overlay {
+  width: 60%;
+  margin-left: -30%;
+}
+#hard_refresh_overlay .image_description {
+  padding: 40px;
+}
+#hard_refresh_overlay .modal-header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+#hard_refresh_overlay .icon-warning-sign{
+  color: #e25303;
+}
+
+/* Hard refresh overlay */
