--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3407,3 +3407,67 @@ button#terminal-send {
 #support_overlay > div.modal-body.scrollable > table {
   margin: 20px auto;
 }
+
+#material_store_content #loading_spinner_wrapper {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
+}
+#material_store_content #loading_spinner {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  color: #ffffff;
+}
+
+#material_store_content #material_store_iframe {
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+  border: none;
+}
+
+#material_store_content .no-internet-connection-section {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-55%);
+  display: block;
+}
+
+#material_store_content .no-internet-connection-section .no-internet-icon img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-80%);
+  padding: 0 5%;
+}
+
+#material_store_content .no-internet-connection-section .no-internet-content {
+  text-align: center;
+  font-size: 20px;
+  padding: 0 60px;
+}
+
+#material_store_content
+  .no-internet-connection-section
+  .no-internet-content
+  h4 {
+  font-size: 20px;
+  margin-bottom: 40px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+#material_store_content .no-internet-connection-section .no-internet-content p {
+  margin-bottom: 30px;
+}
+
+#material_store_content
+  .no-internet-connection-section
+  .no-internet-content
+  .btn.refresh-connection {
+  margin-top: 45px;
+}
